# factory-runner

./: .bws-secrets.toml  .gitignore  CLAUDE.md  Makefile  PROJECT.md  pyproject.toml
.github/workflows/: factory-runner.yml
docs/: local-heavy-runtime.md  rollout.md
docs/superpowers/evidence/: 2026-07-08-ws41-factory-runner-evidence.md
docs/superpowers/plans/: 2026-07-08-ws41-factory-runner.md  2026-07-08-ws43-local-heavy-runtime.md
docs/superpowers/specs/: 2026-07-08-ws41-factory-runner-design.md  2026-07-08-ws43-local-heavy-runtime-design.md
scripts/: run-factory-task.sh
src/factory_runner/: authority.py  capability_vocabulary.py  cli.py  client.py  coding_result.py  command_policy.py  evidence.py  models.py  pr_body.py
tests/: test_authority.py  test_cli.py  test_client.py  test_coding_result.py  test_command_policy.py  test_evidence.py  test_orchestrator_command_contract.py  test_orchestrator_envelope_contract.py  test_package_import.py  test_pr_body.py  test_workflow_contract.py
tests/fixtures/: orchestrator_command_contract.json  runner_authority_envelope.json
